Prevent home content from getting too wide

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -99,6 +99,8 @@ nav {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .home-container > * {
